--- a/firmware/boards/nogusb.conf
+++ b/firmware/boards/nogusb.conf
@@ -2,5 +2,11 @@
 CONFIG_BOOTLOADER_MCUBOOT=y
 CONFIG_MCUBOOT_SIGNATURE_KEY_FILE="bootloader/mcuboot/root-rsa-2048.pem"
 
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_LOG_MODE_IMMEDIATE=y
+
 CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_CDC_ACM=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+
+CONFIG_DEBUG_THREAD_INFO=y
