added USB interface

--- a/firmware/boards/nogusb.conf
+++ b/firmware/boards/nogusb.conf
@@ -2,11 +2,20 @@
 CONFIG_BOOTLOADER_MCUBOOT=y
 CONFIG_MCUBOOT_SIGNATURE_KEY_FILE="bootloader/mcuboot/root-rsa-2048.pem"
 
+CONFIG_DEBUG_THREAD_INFO=y
+
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_LOG_MODE_IMMEDIATE=y
 
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
 
-CONFIG_DEBUG_THREAD_INFO=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_VID=0x0069
+CONFIG_USB_DEVICE_PID=0x0420
+CONFIG_USB_DEVICE_MANUFACTURER="JABI"
+CONFIG_USB_DEVICE_PRODUCT="NOGUSB"
+CONFIG_USB_DEVICE_SN="69420"
+CONFIG_USB_SELF_POWERED=n
+
+CONFIG_UART_INTERRUPT_DRIVEN=y
