--- a/firmware/boards/nogusb.conf
+++ b/firmware/boards/nogusb.conf
@@ -8,13 +8,15 @@ CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_LOG_MODE_IMMEDIATE=y
 
-CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
-
+# USB settings
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_VID=0x0069
 CONFIG_USB_DEVICE_PID=0x0420
 CONFIG_USB_DEVICE_MANUFACTURER="JABI"
 CONFIG_USB_DEVICE_PRODUCT="NOGUSB"
 CONFIG_USB_SELF_POWERED=n
+CONFIG_USB_MAX_POWER=250
 
+# UART settings
+CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
