--- a/clients/pyjabi/CMakeLists.txt
+++ b/clients/pyjabi/CMakeLists.txt
@@ -9,3 +9,4 @@ pybind11_add_module(jabi jabi.cpp) # defines the import name
 
 add_subdirectory(../libjabi ${CMAKE_CURRENT_BINARY_DIR}/libjabi)
 target_link_libraries(jabi PRIVATE libjabi)
+set_target_properties(libjabi PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
