--- a/tests/grpc-client/CMakeLists.txt
+++ b/tests/grpc-client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20.0)
 
-project(test_libjabi)
+project(grpc-client)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -11,6 +11,10 @@ else()
     add_compile_options(-Wall -Wextra -Werror)
 endif()
 
+add_subdirectory(../../include/protos ${CMAKE_CURRENT_BINARY_DIR}/protos)
 add_subdirectory(../../clients/libjabi ${CMAKE_CURRENT_BINARY_DIR}/libjabi)
-add_executable(main main.cpp)
-target_link_libraries(main libjabi)
+add_executable(main
+    main.cpp
+    client.cpp
+)
+target_link_libraries(main jabiproto libjabi)
