--- a/firmware/boards/nogusb.conf
+++ b/firmware/boards/nogusb.conf
@@ -5,7 +5,7 @@ CONFIG_MCUBOOT_SIGNATURE_KEY_FILE="bootloader/mcuboot/root-rsa-2048.pem"
 CONFIG_DEBUG_THREAD_INFO=y
 
 CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=3
+CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_LOG_MODE_IMMEDIATE=y
 
 # USB settings
@@ -20,3 +20,8 @@ CONFIG_USB_MAX_POWER=250
 # UART settings
 CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
+
+# CAN settings
+CONFIG_CAN=y
+CONFIG_CAN_FD_MODE=y
+CONFIG_CAN_AUTO_BUS_OFF_RECOVERY=y
