--- a/tests/libjabi/CMakeLists.txt
+++ b/tests/libjabi/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 if(MSVC)
-    add_compile_options(/W4 /WX)
+    add_compile_options(/W4 /WX /wd4200)
 else()
     add_compile_options(-Wall -Wextra -Werror)
 endif()
