added I2C firmware support

--- a/firmware/boards/efm32wg.conf
+++ b/firmware/boards/efm32wg.conf
@@ -5,4 +5,8 @@ CONFIG_JABI_SERIAL="efm32wg 69420"
 CONFIG_CONSOLE=n
 CONFIG_UART_CONSOLE=n
 
+# Interface settings
 CONFIG_UART_INTERRUPT_DRIVEN=y
+
+# Peripheral settings
+CONFIG_I2C=y
