--- a/firmware/boards/nogusb.conf
+++ b/firmware/boards/nogusb.conf
@@ -25,3 +25,6 @@ CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_CAN=y
 CONFIG_CAN_FD_MODE=y
 CONFIG_CAN_AUTO_BUS_OFF_RECOVERY=y
+
+# I2C settings
+CONFIG_I2C=y
