added GPIO support

--- a/firmware/boards/nogusb.conf
+++ b/firmware/boards/nogusb.conf
@@ -8,7 +8,7 @@ CONFIG_LOG=n
 CONFIG_LOG_DEFAULT_LEVEL=2
 CONFIG_LOG_MODE_IMMEDIATE=y
 
-# USB settings
+# Interface settings
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_VID=0x0069
 CONFIG_USB_DEVICE_PID=0x0420
@@ -17,14 +17,12 @@ CONFIG_USB_DEVICE_PRODUCT="NOGUSB"
 CONFIG_USB_SELF_POWERED=n
 CONFIG_USB_MAX_POWER=250
 
-# UART settings
 CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
-# CAN settings
+# Peripheral settings
 CONFIG_CAN=y
 CONFIG_CAN_FD_MODE=y
 CONFIG_CAN_AUTO_BUS_OFF_RECOVERY=y
-
-# I2C settings
 CONFIG_I2C=y
+CONFIG_GPIO=y
