--- a/firmware/boards/nogusb.conf
+++ b/firmware/boards/nogusb.conf
@@ -9,6 +9,10 @@ CONFIG_LOG_DEFAULT_LEVEL=2
 CONFIG_LOG_MODE_IMMEDIATE=y
 
 # Interface settings
+CONFIG_JABI_REQ_PAYLOAD_MAX_SIZE=1024
+CONFIG_JABI_RESP_PAYLOAD_MAX_SIZE=1024
+CONFIG_JABI_THREAD_STACK_SIZE=4096
+
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_VID=0x0069
 CONFIG_USB_DEVICE_PID=0x0420
