clients dynamically adapt to maximum packet sizes of interfaces

--- a/firmware/boards/efm32wg.conf
+++ b/firmware/boards/efm32wg.conf
@@ -6,6 +6,10 @@ CONFIG_CONSOLE=n
 CONFIG_UART_CONSOLE=n
 
 # Interface settings
+CONFIG_JABI_REQ_PAYLOAD_MAX_SIZE=4096
+CONFIG_JABI_RESP_PAYLOAD_MAX_SIZE=4096
+CONFIG_JABI_THREAD_STACK_SIZE=16384
+
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
 # Peripheral settings
