--- a/firmware/boards/leveler.conf
+++ b/firmware/boards/leveler.conf
@@ -5,6 +5,10 @@ CONFIG_LOG_DEFAULT_LEVEL=2
 CONFIG_LOG_MODE_IMMEDIATE=y
 
 # Interface settings
+CONFIG_JABI_REQ_PAYLOAD_MAX_SIZE=16384
+CONFIG_JABI_RESP_PAYLOAD_MAX_SIZE=16384
+CONFIG_JABI_THREAD_STACK_SIZE=65536
+
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
