added UART client support

--- a/clients/libjabi/CMakeLists.txt
+++ b/clients/libjabi/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(libjabi
     peripherals/adc.cpp
     peripherals/dac.cpp
     peripherals/spi.cpp
+    peripherals/uart.cpp
 )
 
 find_package(libusb CONFIG QUIET)
