--- a/firmware/boards/nogusb.conf
+++ b/firmware/boards/nogusb.conf
@@ -4,6 +4,9 @@ CONFIG_MCUBOOT_SIGNATURE_KEY_FILE="bootloader/mcuboot/root-rsa-2048.pem"
 
 CONFIG_DEBUG_THREAD_INFO=y
 
+CONFIG_CONSOLE=n
+CONFIG_UART_CONSOLE=n
+
 CONFIG_LOG=n
 CONFIG_LOG_DEFAULT_LEVEL=2
 CONFIG_LOG_MODE_IMMEDIATE=y
