--- a/firmware/boards/jabican_usb_pro.conf
+++ b/firmware/boards/jabican_usb_pro.conf
@@ -19,11 +19,8 @@ CONFIG_USB_DEVICE_PRODUCT="JABICAN-USB Pro"
 CONFIG_USB_SELF_POWERED=n
 CONFIG_USB_MAX_POWER=250
 
-CONFIG_UART_INTERRUPT_DRIVEN=y
-
 # Peripheral settings
 CONFIG_CAN=y
 CONFIG_CAN_AUTO_BUS_OFF_RECOVERY=y
+CONFIG_LIN=y
 CONFIG_GPIO=y
-
-CONFIG_JABI_UART_RX_BUFFER_SIZE=4096
