--- a/firmware/boards/usb_pdmon.conf
+++ b/firmware/boards/usb_pdmon.conf
@@ -4,6 +4,8 @@ CONFIG_LOG_MODE_IMMEDIATE=n
 CONFIG_LOG_PROCESS_TRIGGER_THRESHOLD=0
 CONFIG_LOG_PROCESS_THREAD_SLEEP_MS=100
 
+CONFIG_JABI_SERIAL="usb_pdmon 69420"
+
 # Interface settings
 CONFIG_JABI_REQ_PAYLOAD_MAX_SIZE=512
 CONFIG_JABI_RESP_PAYLOAD_MAX_SIZE=512
