update firmware for zephyr 3.6.0

--- a/firmware/boards/jabican_usb_pro.conf
+++ b/firmware/boards/jabican_usb_pro.conf
@@ -21,6 +21,7 @@ CONFIG_USB_MAX_POWER=250
 
 # Peripheral settings
 CONFIG_CAN=y
+CONFIG_CAN_ACCEPT_RTR=y
 CONFIG_CAN_AUTO_BUS_OFF_RECOVERY=y
 CONFIG_LIN=y
 CONFIG_GPIO=y
