--- a/firmware/boards/nogusb.conf
+++ b/firmware/boards/nogusb.conf
@@ -22,11 +22,10 @@ CONFIG_USB_DEVICE_PRODUCT="NOGUSB"
 CONFIG_USB_SELF_POWERED=n
 CONFIG_USB_MAX_POWER=250
 
-CONFIG_UART_INTERRUPT_DRIVEN=y
-
 # Peripheral settings
 CONFIG_CAN=y
 CONFIG_CAN_FD_MODE=y
+CONFIG_CAN_ACCEPT_RTR=y
 CONFIG_CAN_AUTO_BUS_OFF_RECOVERY=y
 CONFIG_I2C=y
 CONFIG_GPIO=y
@@ -34,4 +33,5 @@ CONFIG_ADC=y
 CONFIG_DAC=y
 CONFIG_SPI=y
 
+CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_JABI_UART_RX_BUFFER_SIZE=8192
