--- a/firmware/boards/k66f_breakout.conf
+++ b/firmware/boards/k66f_breakout.conf
@@ -17,13 +17,13 @@ CONFIG_USB_DEVICE_PRODUCT="K66F Breakout"
 CONFIG_USB_SELF_POWERED=n
 CONFIG_USB_MAX_POWER=250
 
-CONFIG_UART_INTERRUPT_DRIVEN=y
-
 # Peripheral settings
 CONFIG_CAN=y
+CONFIG_CAN_ACCEPT_RTR=y
 CONFIG_CAN_AUTO_BUS_OFF_RECOVERY=y
 CONFIG_I2C=y
 CONFIG_GPIO=y
 CONFIG_SPI=y
 
+CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_JABI_UART_RX_BUFFER_SIZE=16384
