--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20.0)
 
-project(test_libjabi)
+project(test_cpp)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -11,6 +11,6 @@ else()
     add_compile_options(-Wall -Wextra -Werror)
 endif()
 
-add_subdirectory(../../clients/libjabi ${CMAKE_CURRENT_BINARY_DIR}/libjabi)
+add_subdirectory(../../clients/cpp ${CMAKE_CURRENT_BINARY_DIR}/cpp)
 add_executable(main main.cpp)
-target_link_libraries(main libjabi)
+target_link_libraries(main jabi)
