--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -26,3 +26,6 @@ exclude = ["libusb", "tmp"]
 
 [tool.setuptools]
 include-package-data = false
+
+[tool.cibuildwheel.macos]
+before-all = "brew install autoconf automake libtool"
